feat: finalizado tratamento de excessões