@@ -11,7 +11,6 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.net.URI;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -28,22 +27,30 @@ public class DependenteController {
         return ResponseEntity.status(HttpStatus.CREATED).body(toDependenteExibicaoDTO(salvo));
     }
 
+    //Exibe todos os dependentes cadastrados
+    @GetMapping()
+    public ResponseEntity<List<DependenteExibicaoDTO>> exibirDependentes() {
+        List<Dependente> dependentes = service.buscarTodos();
+        List<DependenteExibicaoDTO> dtos = dependentes.stream()
+                .map(this::toDependenteExibicaoDTO).toList();
+        return ResponseEntity.ok(dtos);
+    }
+
+    //Exibe todos os dependentes do associado
     @GetMapping("/associado/{id}")
     public ResponseEntity<List<DependenteExibicaoDTO>> exibirDependentesPorAssociado(@PathVariable Long id) {
         List<Dependente> dependentes = service.buscarPorAssociado(id);
         List<DependenteExibicaoDTO> dtos = dependentes.stream()
-                .map(this::toDependenteExibicaoDTO)
-                .collect(Collectors.toList());
+                .map(this::toDependenteExibicaoDTO).toList();
         return ResponseEntity.ok(dtos);
     }
-
+    //Exibe um dependente
     @GetMapping("/{id}")
     public ResponseEntity<DependenteExibicaoDTO> exibirDependente(@PathVariable Long id){
-        return service.buscarPeloId(id)
-                .map(dependente -> ResponseEntity.ok(toDependenteExibicaoDTO(dependente)))
-                .orElse(ResponseEntity.notFound().build());
-    }
+        Dependente dependente = service.buscarPeloId(id);
+        return ResponseEntity.ok(toDependenteExibicaoDTO(dependente));
 
+    }
 
     @PutMapping("/{id}")
     public ResponseEntity<DependenteExibicaoDTO> atualizarDependente(@PathVariable Long id,
